Safari z-index fix and other small QA things

--- a/source/stylesheets/components/_scaffolding.scss
+++ b/source/stylesheets/components/_scaffolding.scss
@@ -430,7 +430,7 @@ a.button-primary, a.button-secondary {
   text-transform: uppercase;
   letter-spacing: 2px;
   padding: 10px 22px 8px;
-  border-radius: 30px;
+  border-radius: 80px;
   border: 3px solid $primary-color;
 
   &:hover,
